--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -3,6 +3,7 @@
   <head>
     <title>Flask Intro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="static/bootstrap.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
