Messing wit hthe html files a tad

--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -6,8 +6,9 @@
     <link href="static/bootstrap.css" rel="stylesheet" media="screen">
   </head>
   <body>
+    <menu>BLAH</menu>
     <div class="container">
-      <h1>Welcome to Flask!</h2>
+      <h1>Welcome to Flask!</h1>
       <br>
       <p>Click <a href="/">here</a> to go home.</p>
     </div>
