--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -3,7 +3,7 @@
   <head>
     <title>Fun Run Challenges</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.css" rel="stylesheet" media="screen">
+    <link href="static/bootstrap.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
