Trying out angular

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -4,6 +4,7 @@
     <title>Fun Run Races</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -15,11 +16,11 @@
       <p><a href="/locations">Locations</a></p>
     </div>
     <div>
-      <ul>
+<!--       <ul>
       {% for run in funruns %}
         <li>{{run.name}}</li>
       {% endfor %}
-      </ul>
+      </ul> -->
     </div>
   </body>
 </html>
