--- a/app/static/bootstrap.css
+++ b/app/static/bootstrap.css
@@ -163,7 +163,7 @@ body {
   font-size: 14px;
   line-height: 20px;
   color: #333333;
-  background-color: #3333EE;
+  background-color: #ffffff;
 }
 
 a {
