hopefully challenges looks more like picollo page now

--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -6,7 +6,7 @@
     <link href="static/bootstrap.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="span3">
       <h1>Fun Run Challenges</h1>
       <br>
       <p><a href="/funruns">Fun Runs</a></p>
