adding color bar

--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="span5">
+      <div class="color-bar-1"></div>
       <h1>Fun Run Challenges</h1>
       <br>
       <p><a href="/funruns">Fun Runs</a></p>
