--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -7,10 +7,9 @@
   </head>
   <body>
     <div class="span5">
-      <div class="color-bar-1"></div>
       <h1>Fun Run Challenges</h1>
       <br>
-      <p><a href="/funruns">Fun Runs</a></p>
+      <li class="active"><a href="/funruns">Fun Runs</a></li>
       <p><a href="/themes">Themes</a></p>
       <p><a href="/challenges">Challenges</a></p>
       <p><a href="/locations">Locations</a></p>
