--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
   <head>
     <title>Fun Run Races</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="static/bootstrap.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="javascript/funruns.js"></script>
   </head>
   <body>
     <div class="container">
@@ -15,12 +16,9 @@
       <p><a href="/challenges">Challenges</a></p>
       <p><a href="/locations">Locations</a></p>
     </div>
-    <div>
-<!--       <ul>
-      {% for run in funruns %}
-        <li>{{run.name}}</li>
-      {% endfor %}
-      </ul> -->
+    <div ng-controller="FunRuns">
+      <p>The ID is {{funruns.id}}</p>
+      <p>The Name is {{funruns.name}}</p>
     </div>
   </body>
 </html>
