--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -6,7 +6,7 @@
     <link href="static/bootstrap.css" rel="stylesheet">
   </head>
   <body>
-    <div class="span5">
+    <div class="span7 navigation">
       <h1>Fun Run Challenges</h1>
       <br>
       <li class="active"><a href="/funruns">Fun Runs</a></li>
