--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -21,6 +21,7 @@
       {% for run in funruns%}
        <p>The ID is {{run.id}}</p>
        <p>The Name is {{run.name}}</p>
+       {% endfor %}
      </ul>
     </div>
   </body>
