--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -9,10 +9,12 @@
     <div class="span7 navigation">
       <h1>Fun Run Challenges</h1>
       <br>
-      <li class="active"><a href="/funruns">Fun Runs</a></li>
-      <p><a href="/themes">Themes</a></p>
-      <p><a href="/challenges">Challenges</a></p>
-      <p><a href="/locations">Locations</a></p>
+      <ul class="nav">
+        <li class="active"><a href="/funruns">Fun Runs</a></li>
+        <li class="active"><a href="/themes">Themes</a></li>
+        <li class="active"><a href="/challenges">Challenges</a></li>
+        <li class="active"><a href="/locations">Locations</a></li>
+      </ul>
     </div>
   </body>
 </html>
