added div class=navbar

--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -9,12 +9,14 @@
     <div class="span7 navigation">
       <h1>Fun Run Challenges</h1>
       <br>
-      <ul class="nav">
-        <li class="active"><a href="/funruns">Fun Runs</a></li>
-        <li class="active"><a href="/themes">Themes</a></li>
-        <li class="active"><a href="/challenges">Challenges</a></li>
-        <li class="active"><a href="/locations">Locations</a></li>
-      </ul>
+      <div class="navbar">
+        <ul class="nav">
+          <li class="active"><a href="/funruns">Fun Runs</a></li>
+          <li class="active"><a href="/themes">Themes</a></li>
+          <li class="active"><a href="/challenges">Challenges</a></li>
+          <li class="active"><a href="/locations">Locations</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
