--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -8,13 +8,17 @@
     <script src="javascript/funruns.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="span7 navigation">
       <h1>Fun Run Races</h1>
       <br>
-      <p><a href="/funruns">Fun Runs</a></p>
-      <p><a href="/themes">Themes</a></p>
-      <p><a href="/challenges">Challenges</a></p>
-      <p><a href="/locations">Locations</a></p>
+      <div class="navbar">
+        <ul class="nav">
+          <li class="active"><a href="/funruns">Fun Runs</a></li>
+          <li class="active"><a href="/themes">Themes</a></li>
+          <li class="active"><a href="/challenges">Challenges</a></li>
+          <li class="active"><a href="/locations">Locations</a></li>
+        </ul>
+      </div>
     </div>
     <div ng-controller="FunRuns">
       <ul>
