--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -6,13 +6,17 @@
     <link href="static/bootstrap.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-      <h1>Fun Run Locations</h1>
+    <div class="span7 navigation">
+      <h1>Fun Run Challenges</h1>
       <br>
-      <p><a href="/funruns">Fun Runs</a></p>
-      <p><a href="/themes">Themes</a></p>
-      <p><a href="/challenges">Challenges</a></p>
-      <p><a href="/locations">Locations</a></p>
+      <div class="navbar">
+        <ul class="nav">
+          <li class="active"><a href="/funruns">Fun Runs</a></li>
+          <li class="active"><a href="/themes">Themes</a></li>
+          <li class="active"><a href="/challenges">Challenges</a></li>
+          <li class="active"><a href="/locations">Locations</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
