fixed titles back  to what they should be (they were all fun run challenges)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="span7 navigation">
-      <h1>Fun Run Challenges</h1>
+      <h1>Welcome! Made by Austinisms!</h1>
       <br>
       <div class="navbar">
         <ul class="nav">
