--- a/app/templates/themes.html
+++ b/app/templates/themes.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="span7 navigation">
-      <h1>Fun Run Challenges</h1>
+      <h1>Fun Run Themes</h1>
       <br>
       <div class="navbar">
         <ul class="nav">
