added link to homepage

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -13,6 +13,7 @@
       <br>
       <div class="navbar">
         <ul class="nav">
+          <li class="active"><a href="/index">Home</a></li>
           <li class="active"><a href="/funruns">Fun Runs</a></li>
           <li class="active"><a href="/themes">Themes</a></li>
           <li class="active"><a href="/challenges">Challenges</a></li>
