trying to add color bars

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,8 @@
     <link href="static/bootstrap.css" rel="stylesheet">
   </head>
   <body>
+    <div class="color-bar-1"></div>
+    <div class="color-bar-2 color-bg"></div>
     <div class="span7 navigation">
       <h1>Welcome! Made by Austinisms!</h1>
       <br>
