still trying to add color bars

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div class="color-bar-1"></div>
-    <div class="color-bar-2 color-bg"></div>
+      <div class="color-bar-2 color-bg"></div>
+      
+      <div class="container main-container">
+      
+        <div class="row header">
     <div class="span7 navigation">
       <h1>Welcome! Made by Austinisms!</h1>
       <br>
@@ -20,6 +24,8 @@
           <li class="active"><a href="/locations">Locations</a></li>
         </ul>
       </div>
+    </div>
+    </div>
     </div>
   </body>
 </html>
