making the tile of the page a row

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -8,7 +8,9 @@
     <script src="javascript/funruns.js"></script>
   </head>
   <body>
+    <div class="row">
     <div class="span7 navigation">
+    </div>
       <h1>Fun Run Races</h1>
       <br>
       <div class="navbar">
