now, trying to make the title of a page title-bg

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -8,10 +8,8 @@
     <script src="javascript/funruns.js"></script>
   </head>
   <body>
-    <div class="row">
     <div class="span7 navigation">
-    </div>
-      <h1>Fun Run Races</h1>
+      <h1 class="title-bg">Fun Run Races</h1>
       <br>
       <div class="navbar">
         <ul class="nav">
