removed title-bg

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="span7 navigation">
-      <h1 class="title-bg">Fun Run Races</h1>
+      <h1>Fun Run Races</h1>
       <br>
       <div class="navbar">
         <ul class="nav">
