--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -13,11 +13,11 @@
       <br>
       <div class="navbar">
         <ul class="nav">
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="active"><a href="/funruns">Fun Runs</a></li>
-          <li class="active"><a href="/themes">Themes</a></li>
-          <li class="active"><a href="/challenges">Challenges</a></li>
-          <li class="active"><a href="/locations">Locations</a></li>
+          <li><a href="/themes">Themes</a></li>
+          <li><a href="/challenges">Challenges</a></li>
+          <li><a href="/locations">Locations</a></li>
         </ul>
       </div>
     </div>
