Got bootstrap working! Really rough right now, need to tinker more

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -23,10 +23,10 @@
     </div>
     <div ng-controller="FunRuns">
       <ul>
-      {% for run in funruns%}
+<!--       {% for run in funruns%}
          <p>The ID is {{run.id}}</p>
          <p>The Name is {{run.name}}</p>
-      {% endfor %}
+      {% endfor %} -->
      </ul>
     </div>
   </body>
