Basic pages done except about

--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -49,7 +49,7 @@
         ================================================== -->
         <div class="span5 logo">
           <a href="/"><img src="{{ url_for('static', filename='img/piccolo-logo.png') }}"/></a>
-            <h5><-- Need to replace</h5>
+            <h5>Fun Run Events</h5>
         </div>
         
         <!-- Main Navigation
@@ -75,10 +75,10 @@
                 <select onchange="window.open(this.options[this.selectedIndex].value,'_top')">
                     <option value="">Navigate...</option>
                     <option value="/">Home</option>
-                    <option value="/funruns">Events</option>
-                    <option value="/themes">Themes</option>
-                    <option value="/challenges">Challenges</option>
-                    <option value="/locations">Locations</option>
+                    <option value="/funruns">Fun Runs</option>
+                    <option value="/themes">Fun Themes</option>
+                    <option value="/challenges">Fun Challenges</option>
+                    <option value="/locations">Fun Locations</option>
                     <option value="/about">About</option>
                 </select>
               </div>
