--- a/app/templates/funruns.html
+++ b/app/templates/funruns.html
@@ -109,7 +109,7 @@
 
                     <!-- Gallery Item 1 -->
                     <li  class="span4 gallery-item" data-id="id-1" data-type="illustration">
-                      <a href="/">
+                      <a href="/funruntempl">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
@@ -119,7 +119,7 @@
 
                     <!-- Gallery Item 2 -->
                     <li  class="span4 gallery-item" data-id="id-2" data-type="illustration">
-                      <a href="/">
+                      <a href="/funruntempl">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
@@ -129,7 +129,7 @@
 
                     <!-- Gallery Item 3 -->
                     <li  class="span4 gallery-item" data-id="id-3" data-type="illustration">
-                      <a href="/">
+                      <a href="/funruntempl">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
                         <img src="{{ url_for('static', filename='img/gallery/gallery-img-1-3col.jpg') }}" alt="Gallery">
