added three more columns and names for everybody

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -135,24 +135,44 @@
 
             </div>
 
-            <h3 class="title-bg"> This is a sub head divider</h3>
+            <h3 class="title-bg"> Meet our team!</h3>
             <div class="row">
                 <div class="span4">
                     <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
-                    <h5>3 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
+                    <h5>Alyssa Williams</h5>
+                    <p>Stuff about Alyssa.</p>
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
                     <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
-                    <h5>3 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
+                    <h5>Kurt Bixby</h5>
+                    <p>Stuff about Kurt.</p>
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
                     <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
-                    <h5>3 Column Layout</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
+                    <h5>Kevin Byers</h5>
+                    <p>Stuff about Kevin.</p>
+                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="span4">
+                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <h5>David Aguirre</h5>
+                    <p>Stuff about David.</p>
+                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
+                </div>
+                <div class="span4">
+                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <h5>Edgar Treto</h5>
+                    <p>Stuff about Edgar.</p>
+                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
+                </div>
+                <div class="span4">
+                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <h5>Hector Garcia</h5>
+                    <p>Stuff about Hector.</p>
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
             </div>
