--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -150,7 +150,7 @@
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
                     <h5>Kevin Byers</h5>
                     <p>Stuff about Kevin.</p>
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
@@ -158,7 +158,7 @@
             </div>
             <div class="row">
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
                     <h5>David Aguirre</h5>
                     <p>Stuff about David.</p>
                     <button class="btn btn-small btn-inverse" type="button">Read more</button>
