Removed read more buttons and added links to everyone elses picture

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -141,19 +141,16 @@
                     <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
                     <h5>Alyssa Williams</h5>
                     <p>Stuff about Alyssa.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Kurt Bixby</h5>
                     <p>Stuff about Kurt.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
                     <img src="{{ url_for('static', filename='img/teamMemberPics/Kevin.jpg') }}" alt="image">
                     <h5>Kevin Byers</h5>
                     <p>Stuff about Kevin.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
             </div>
             <div class="row">
@@ -161,19 +158,16 @@
                     <img src="{{ url_for('static', filename='img/teamMemberPics/David.jpg') }}" alt="image">
                     <h5>David Aguirre</h5>
                     <p>Stuff about David.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
                     <h5>Edgar Treto</h5>
                     <p>Stuff about Edgar.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
                 <div class="span4">
-                    <img src="img/gallery/gallery-img-1-3col.jpg" alt="image">
+                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="image">
                     <h5>Hector Garcia</h5>
                     <p>Stuff about Hector.</p>
-                    <button class="btn btn-small btn-inverse" type="button">Read more</button>
                 </div>
             </div>
 
