--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -143,7 +143,7 @@
                     <p>Stuff about Alyssa.</p>
                 </div>
                 <div class="span4">
-                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Kurt.jpg') }}" alt="image">
                     <h5>Kurt Bixby</h5>
                     <p>Stuff about Kurt.</p>
                 </div>
@@ -160,12 +160,12 @@
                     <p>Stuff about David.</p>
                 </div>
                 <div class="span4">
-                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Edgar.jpg') }}" alt="image">
                     <h5>Edgar Treto</h5>
                     <p>Stuff about Edgar.</p>
                 </div>
                 <div class="span4">
-                    <img src=src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="image">
+                    <img src="{{ url_for('static', filename='img/teamMemberPics/Hector.jpg') }}" alt="image">
                     <h5>Hector Garcia</h5>
                     <p>Stuff about Hector.</p>
                 </div>
